# Eldrow

./: Cargo.toml  README.md
data/es/: solutions.txt  valid.txt
data/it/: valid.txt
data/lv/: solutions.txt  valid.txt
data/uk/: solutions.txt  valid.txt
src/: benchmark.rs  common.rs  dataloader.rs  entropy.rs  input.rs  main.rs  patterns.rs  play.rs
src/common/: colors.rs  match_info.rs  mod.rs  pattern.rs  utils.rs  word.rs
