[package]
name = "eldrow"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "3.2.19", features = ["derive"] }
crossterm = "0.25.0"
indicatif = "0.17.0"
rayon = "1.5.1"
termcolor = "1.1.3"
